--- a/frontend/src/assets/styles/components/Navbar.css
+++ b/frontend/src/assets/styles/components/Navbar.css
@@ -2,7 +2,7 @@
   width: 100%;
   /* height: 110px; */
   background-color: #fffaeb;
-  position: fixed;
+  position: absolute;
   z-index: 1001;
   top: 0;
   padding: 15px 0;
