--- a/frontend/src/assets/styles/components/Navbar.css
+++ b/frontend/src/assets/styles/components/Navbar.css
@@ -1,6 +1,8 @@
+/* КИРИЛЛ С POST CSS Теперь стили сложно читать, незнаю как ты но у меня дискомфорт от этого зрелища */
+
+/* ОСНОВНЫЕ СТИЛИ  */
 .navbar {
   width: 100%;
-  /* height: 110px; */
   background-color: #fffaeb;
   position: absolute;
   z-index: 1001;
@@ -8,15 +10,11 @@
   padding: 15px 0;
 
   @media (--tablet-lg) {
-    height: 80px;
+    background-color: rgba(0, 0, 0, 0);
+    padding: 25px 0;
   }
-
   @media (--mobile) {
-    background-size: cover;
-  }
-
-  &__burger {
-    position: absolute;
+    padding: 15px 0;
   }
 
   .container {
@@ -30,9 +28,17 @@
       justify-content: flex-start;
       align-items: center;
       padding-bottom: 0;
+      padding-left: calc(var(--gs) * 3);
     }
   }
 
+  /* ======================= Наименование страницы ================================*/
+  &__pageTitle {
+    color: #c99072;
+    margin-left: 14px;
+  }
+
+  /* ======================= ЛОГОТИП =============================================*/
   &__logo {
     max-width: 220px;
     flex: 1 0 100px;
@@ -40,10 +46,13 @@
     margin-right: 30px;
 
     @media (--tablet-lg) {
+      position: absolute;
+
+      left: 50%;
       display: block;
-      width: 50px;
-      height: 50px;
-      margin: 0 auto;
+      width: 54px;
+      height: 37px;
+      transform: translateX(-50%) translateY(-5px);
     }
 
     img {
@@ -52,32 +61,7 @@
     }
   }
 
-  &__list {
-    display: flex;
-    align-items: flex-end;
-    padding-bottom: 20px;
-
-    @media (--tablet-lg) {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-    }
-  }
-
-  &__item {
-    margin-right: 30px;
-    user-select: none;
-
-    &:last-child {
-      margin-right: 0;
-    }
-
-    @media (--tablet-lg) {
-      margin-right: 0;
-      margin-bottom: calc(var(--gs) * 0.5);
-    }
-  }
-
+  /* ========================ГРУППА ОСНОВНЫХ ССЫЛОК============================== */
   &__wrapper {
     @media (--tablet-lg) {
       position: absolute;
@@ -108,6 +92,32 @@
     }
   }
 
+  &__list {
+    display: flex;
+    align-items: flex-end;
+    padding-bottom: 20px;
+
+    @media (--tablet-lg) {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  }
+  /* ======================== Стили для ССЫЛОК============================== */
+  &__item {
+    margin-right: 30px;
+    user-select: none;
+
+    &:last-child {
+      margin-right: 0;
+    }
+
+    @media (--tablet-lg) {
+      margin-right: 0;
+      margin-bottom: calc(var(--gs) * 0.5);
+    }
+  }
+
   &__link {
     font-size: 30px;
 
@@ -118,10 +128,6 @@
     @media (--mobile-lg) {
       font-size: 20px;
     }
-
-    /* @media (--tablet-lg) {
-            font-size: 20px;
-        } */
 
     &.router-link-exact-active {
       color: var(--cl-brown);
@@ -144,4 +150,14 @@
       height: 100%;
     }
   }
+}
+
+.navbar__topBackground {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 120%;
 }
