--- a/frontend/src/assets/styles/base/base.css
+++ b/frontend/src/assets/styles/base/base.css
@@ -1,4 +1,7 @@
-/* Базовые стили */
+/*============================================================*/
+/*=================== Базовые стили ==========================*/
+/*================ Для страниц и блоков ======================*/
+/*============================================================*/
 *,
 ::before,
 ::after {
@@ -6,15 +9,14 @@
   padding: 0;
   margin: 0;
 }
-
 html,
 body {
+  flex-grow: 1;
   min-height: 100vh;
   @media (--tablet-lg) {
-    min-height: 850px;
+    min-height: 100vh;
   }
 }
-
 body {
   display: flex;
   flex-direction: column;
@@ -22,24 +24,27 @@ body {
   line-height: 24px;
   overflow-x: hidden;
   overflow-y: auto;
-  height: 100%;
   position: relative;
   vertical-align: top;
   backface-visibility: hidden;
   font-family: var(--base-font);
   background-color: #fffaeb;
 }
-
+#app {
+  height: 100%;
+  width: 100%;
+}
 main {
   position: relative;
   min-width: var(--mobile-sm-size-min);
   margin: 0;
 }
-
 img {
   max-width: 100%;
   height: auto;
 }
+
+/*=================== Текст ==================================*/
 
 p {
   line-height: 24px;
@@ -47,32 +52,52 @@ p {
   font-size: var(--fs-p);
 }
 
+/*=================== Заголовки ==============================*/
+
 h1 {
   font-size: var(--fs-h1);
   line-height: 1;
   font-family: var(--title-font);
   color: var(--cl-brown);
 }
-
 h2 {
-  font-size: var(--fs-h1);
+  font-size: var(--fs-h2);
   line-height: 1.1;
   font-weight: bold;
 }
-
 h3 {
-  font-size: 25px;
+  font-size: var(--fs-h3);
   line-height: 28px;
   font-weight: bold;
 }
-
 h4,
 h5,
 h6 {
-  font-size: 18px;
+  font-size: var(--fs-p);
   line-height: 24px;
   font-weight: 500;
 }
+
+/*=================== Ссылки ==============================*/
+
+a {
+  color: inherit;
+  fill: inherit;
+  text-decoration: none;
+  transition: var(--time);
+  font-family: var(--title-font);
+  font-size: var(--fs-a);
+}
+a:hover {
+  text-decoration: none;
+}
+a.disabled,
+a.is-disabled {
+  cursor: default;
+  pointer-events: none;
+}
+
+/*=================== Кнопки ==============================*/
 
 button {
   border: none;
@@ -91,95 +116,4 @@ ul,
 ol li {
   position: relative;
   list-style: none outside;
-}
-
-/* Links */
-
-a {
-  color: inherit;
-  fill: inherit;
-  text-decoration: none;
-  transition: var(--time);
-}
-
-a:hover {
-  text-decoration: none;
-}
-
-a {
-  font-family: var(--title-font);
-  font-size: 23px;
-}
-
-a.disabled,
-a.is-disabled {
-  cursor: default;
-  pointer-events: none;
-}
-
-/* MEDIA
-============================================================*/
-/* DESKTOP */
-
-@media (max-width: 1279px) {
-  h1 {
-    font-size: 30px;
-  }
-
-  h2 {
-    font-size: 30px;
-  }
-
-  p {
-    font-size: 18px;
-  }
-
-  a {
-    font-size: 20px;
-  }
-}
-/* TABLET */
-@media (max-width: 767px) {
-  h1 {
-    font-size: 25px;
-  }
-
-  h2 {
-    font-size: 30px;
-  }
-
-  p {
-    font-size: 18px;
-  }
-
-  a {
-    font-size: 20px;
-  }
-}
-
-/* MOBILE */
-@media (max-width: 479px) {
-  h1 {
-    font-size: 25px;
-  }
-
-  h2 {
-    font-size: 25px;
-  }
-
-  h3 {
-    font-size: 16px;
-  }
-
-  p {
-    font-size: 14px;
-  }
-
-  a {
-    font-size: 17px;
-  }
-}
-#app {
-  height: 100%;
-  width: 100%;
 }
