--- a/frontend/src/assets/styles/components/Navbar.css
+++ b/frontend/src/assets/styles/components/Navbar.css
@@ -37,6 +37,10 @@
     color: #c99072;
     margin-left: 14px;
     animation: fade-up 0.4s ease-in-out;
+
+    @media (--mobile) {
+      font-size: 18px;
+    }
   }
 
   /* ======================= ЛОГОТИП =============================================*/
