--- a/frontend/src/assets/styles/base/base.css
+++ b/frontend/src/assets/styles/base/base.css
@@ -64,6 +64,14 @@ h2 {
   font-size: var(--fs-h2);
   line-height: 1.1;
   font-weight: bold;
+
+  @media (--tablet-lg) {
+    font-size: 32px;
+  }
+
+  @media (--tablet) {
+    font-size: 28px;
+  }
 }
 h3 {
   font-size: var(--fs-h3);
