--- a/frontend/src/assets/styles/pages/partners.css
+++ b/frontend/src/assets/styles/pages/partners.css
@@ -12,16 +12,30 @@
         margin: 0 auto;
         margin-bottom: calc(var(--gs) * 4);
 
+        @media (max-width: 1300px) {
+            width: 85%;
+        }
+
+        @media (max-width: 1150px) {
+            width: 100%;
+        }
+
         @media (--tablet-lg) {
+            width: 85%;
+            padding-right: 0;
+            padding-left: 0;
+
+            .swiper-button-prev,
+            .swiper-button-next {
+                display: none;
+            }
+        }
+
+        @media (max-width: 900px) {
             width: 100%;
         }
 
         @media (--tablet) {
-            padding-right: 0;
-            padding-left: 0;
-        }
-
-        @media (--mobile-lg) {
             padding-right: calc(var(--gs) * 3);
             padding-left: calc(var(--gs) * 3);
         }
@@ -29,6 +43,148 @@
         @media (--mobile) {
             padding-right: 0;
             padding-left: 0;
+        }
+    }
+
+    &__slide {
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+        position: relative;
+
+        &-content {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            z-index: -1;
+
+            @media (--tablet) {
+                display: block;
+                height: 100%;
+                margin: 0 auto;
+            }
+
+            .partners__slide-background {
+                display: block;
+                margin: 0 auto;
+            }
+
+            &:after {
+                content: '';
+                display: block;
+                width: 75%;
+                height: 100%;
+                background: black;
+                position: absolute;
+                top: 0;
+                left: 12.5%;
+                opacity: 0.2;
+                border-radius: 25px;
+
+                @media (--tablet) {
+                    width: 100%;
+                    left: 0;
+                }
+            }
+        }
+
+        &-info {
+            display: none;
+            position: absolute;
+            top: 50%;
+            height: 100%;
+            transform: translateY(-50%);
+            z-index: 10;
+            background: #FFEDE1;
+            border-radius: 25px;
+            padding: calc(var(--gs) * 6) calc(var(--gs) * 2.5) calc(var(--gs) * 3) ;
+
+            @media (--tablet) {
+                display: block;
+                height: 100%;
+                margin: 0 auto;
+            }
+
+            &-close {
+                position: absolute;
+                width: 15px;
+                height: 15px;
+                top: 24px;
+                right: 24px;
+                cursor: pointer;
+
+                &:after,
+                &:before {
+                    content: '';
+                    display: block;
+                    width: 21px;
+                    height: 3px;
+                    background: var(--cl-grey);
+                    position: absolute;
+                    top: 50%;
+                }
+
+                &:after {
+                    transform: translateY(-50%) rotate(-45deg);
+                }
+
+                &:before {
+                    transform: translateY(-50%) rotate(45deg);
+                }
+            }
+
+            &-img {
+                max-width: 100%;
+                max-height: 100%;
+                margin-bottom: calc(var(--gs) * 2);
+            }
+
+            &-scrollbar {
+                max-height: 100%;
+            }
+
+            &-text {
+                font-size: 20px;
+                line-height: 1.5;
+            }
+
+            &-link {
+                position: relative;
+                padding-left: calc(var(--gs) * 2.5);
+                font-size: 20px;
+
+                .icon {
+                    position: absolute;
+                    left: 0;
+                    top: 50%;
+                    transform: translateY(-50%)
+                }
+
+                &:
+            }
+        }
+
+        &-title {
+            font-size: 28px;
+            /* font-size: 40px; */
+            z-index: 2;
+            color: var(--cl-white);
+            text-align: center;
+            position: absolute;
+            bottom: 24px;
+            width: 100%;
+        }
+
+        &-wrapper {
+            position: relative;
+            height: 100%;
+            width: 100%;
+            z-index: 0;
+
+            @media (--tablet) {
+                display: flex;
+                justify-content: center;
+            }
         }
     }
 
@@ -41,10 +197,8 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            /* min-width: 120px; */
-            /* max-width: 237px; */
 
-            img {
+            .partners__slide-background {
                 transition: var(--animation-time);
                 width: 75%;
                 height: 75%;
@@ -52,24 +206,47 @@
                 max-width: 100%;
                 max-height: 100%;
 
-                @media(--mobile-lg) {
+                @media(--tablet) {
                     width: auto;
                     height: auto;
                 }
             }
+
         }
 
         .swiper-slide-active {
             width: 45%;
             height: 100%;
 
-            img {
-                width: 100%;
-                height: 100%;
+            .partners__slide-content {
 
-                @media(--mobile-lg) {
-                    width: auto;
-                    height: auto;
+                .partners__slide-background {
+                    width: 100%;
+                    height: 100%;
+
+                    @media(--tablet) {
+                        width: auto;
+                        height: auto;
+                    }
+
+                    &.is-active {
+                        opacity: 0;
+                    }
+                }
+
+                .partners__slide-info {
+                    &.is-active {
+                        display: block;
+                    }
+                }
+
+                &:after {
+                    width: 100%;
+                    left: 0;
+
+                    @media (--tablet) {
+
+                    }
                 }
             }
         }
