Внес пару исправлений

--- a/frontend/src/assets/styles/components/Breadcrumbs.css
+++ b/frontend/src/assets/styles/components/Breadcrumbs.css
@@ -19,6 +19,10 @@
     &:hover {
       border-bottom: none;
     }
+
+    @media (--tablet) {
+      font-size: 18px;
+    }
   }
 }
 @keyframes fade-up {
