--- a/frontend/src/assets/styles/base/base.css
+++ b/frontend/src/assets/styles/base/base.css
@@ -61,12 +61,14 @@ h1 {
   color: var(--cl-brown);
 }
 h2 {
+  font-family: 'GOST2_304typeA';
   font-size: var(--fs-h2);
   line-height: 1.1;
   font-weight: bold;
 
   @media (--tablet-lg) {
     font-size: 32px;
+    line-height: 1.3;
   }
 
   @media (--tablet) {
