--- a/frontend/src/assets/styles/components/Navbar.css
+++ b/frontend/src/assets/styles/components/Navbar.css
@@ -4,7 +4,7 @@
 .navbar {
   width: 100%;
   background-color: #fffaeb;
-  position: absolute;
+  position: fixed;
   z-index: 1001;
   top: 0;
   padding: 15px 0;
@@ -69,9 +69,9 @@
   /* ========================ГРУППА ОСНОВНЫХ ССЫЛОК============================== */
   &__wrapper {
     @media (--tablet-lg) {
-      position: absolute;
+      position: fixed;
       left: 0;
-      top: -25px;
+      top: 0;
       height: 100vh;
       min-height: 322px;
       width: 35vw;
@@ -88,7 +88,7 @@
 
     @media (--mobile) {
       width: 240px;
-      top: -15px;
+      /* top: -15px; */
     }
 
     &.open {
@@ -142,13 +142,13 @@
 
   &__fond-img {
     display: none;
-    width: 65px;
-    height: 60px;
+    width: 80px;
+    height: 75px;
 
     @media (--tablet-lg) {
       display: block;
       position: absolute;
-      bottom: 40px;
+      bottom: 24px;
     }
 
     img {
