--- a/frontend/src/assets/styles/pages/template.css
+++ b/frontend/src/assets/styles/pages/template.css
@@ -1,4 +1,4 @@
-.targets {
+.template {
     &__button-back {
         margin-bottom: calc(var(--gs) * 3);
     }
@@ -10,6 +10,11 @@
         padding: 0 calc(var(--gs) * 11.25);
         padding-bottom: calc(var(--gs) * 6);
         margin-bottom: calc(var(--gs) * 4);
+
+        @media (--tablet-lg) {
+            padding-right: calc(var(--gs) * 3);
+            padding-left: calc(var(--gs) * 3);
+        }
 
         @media (--tablet) {
             width: 100%;
@@ -28,6 +33,10 @@
         height: 55vh;
         align-items: center;
 
+        @media (--desktop) {
+            padding: 0;
+        }
+
         @media (--tablet) {
             height: 600px;
             flex-direction: column-reverse;
@@ -39,6 +48,25 @@
         display: flex;
         position: static;
         height: 100%;
+
+        &-img {
+            display: flex;
+            width: fit-content;
+            position: relative;
+
+            &:after {
+                content: '';
+                display: block;
+                width: 100%;
+                height: 100%;
+                background: black;
+                position: absolute;
+                top: 0;
+                left: 0;
+                opacity: 0.2;
+                border-radius: 25px;
+            }
+        }
 
         .swiper-slide {
             display: flex;
@@ -73,7 +101,7 @@
 
         .swiper-button-next,
         .swiper-button-prev {
-            @media (--mobile) {
+            @media (--tablet-lg) {
                 display: none;
             }
         }
@@ -83,6 +111,10 @@
     &__wrapper {
         width: 45%;
         margin-right: calc(var(--gs) * 2.75);
+
+        &--full {
+            width: 100%;
+        }
 
         @media (--tablet) {
             width: 100%;
