--- a/frontend/src/assets/styles/elements/home-button.css
+++ b/frontend/src/assets/styles/elements/home-button.css
@@ -11,40 +11,33 @@
   align-items: center;
   justify-content: center;
   user-select: none;
-  &:hover {
-    border: 5px solid #349a8a;
-  }
-  /* Link in button */
-  a {
-    color: #343434;
-    text-decoration: none;
-    text-transform: uppercase;
-    @media (--tablet-lg) {
-      color: #fffaeb;
-      font-size: 14px;
-      &:hover {
-        color: #fffaeb;
-      }
-    }
-  }
-  &:hover a {
-    color: #949494;
-  }
-  /* Media  */
+  color: #343434;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 24px;
 
   @media (--tablet-lg) {
+    color: #fffaeb;
+    font-size: 20px;
     border: none;
     background-color: #349a8a;
-    height: 42px;
-    width: 200px;
+    height: 60px;
+    width: 300px;
     position: absolute;
     top: 0;
     left: 50%;
     transform: translateX(-50%) translateY(-100%);
     box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.2);
     user-select: none;
-    &:hover a {
-      color: #fff;
+
+    &:hover {
+      color: #fffaeb;
     }
+  }
+
+  @media (--mobile-lg) {
+    font-size: 16px;
+    width: 250px;
+    height: 48px;
   }
 }
