--- a/frontend/src/assets/styles/elements/home-button.css
+++ b/frontend/src/assets/styles/elements/home-button.css
@@ -16,6 +16,11 @@
   text-transform: uppercase;
   font-size: 24px;
 
+  &:hover {
+    border: 5px solid #349a8a;
+    color: #949494;
+  }
+
   @media (--tablet-lg) {
     color: #fffaeb;
     font-size: 20px;
