--- a/frontend/src/assets/styles/pages/partners.css
+++ b/frontend/src/assets/styles/pages/partners.css
@@ -53,6 +53,7 @@
         position: relative;
 
         &-content {
+            display: flex;
             position: absolute;
             top: 50%;
             transform: translateY(-50%);
@@ -62,6 +63,15 @@
                 display: block;
                 height: 100%;
                 margin: 0 auto;
+            }
+
+            &-logo {
+                position: absolute;
+                top: 16px;
+                left: 50%;
+                transform: translateX(-85%);
+                max-width: 100px;
+                max-height: 80px;
             }
 
             .partners__slide-background {
@@ -217,6 +227,10 @@
             height: 100%;
 
             .partners__slide-content {
+                &:after {
+                    width: 100%;
+                    left: 0;
+                }
 
                 .partners__slide-background {
                     width: 100%;
@@ -238,14 +252,7 @@
                     }
                 }
 
-                &:after {
-                    width: 100%;
-                    left: 0;
 
-                    @media (--tablet) {
-
-                    }
-                }
             }
         }
 
