--- a/frontend/src/assets/styles/pages/template.css
+++ b/frontend/src/assets/styles/pages/template.css
@@ -51,7 +51,8 @@
 
         &-img {
             display: flex;
-            width: fit-content;
+            width: 327px;
+            height: 327px;
             position: relative;
 
             &:after {
@@ -124,5 +125,9 @@
 
     &__text {
         margin-right: calc(var(--gs) * 2);
+
+        @media (--tablet) {
+            font-size: 16px;
+        }
     }
 }
