--- a/frontend/src/assets/styles/components/Footer.css
+++ b/frontend/src/assets/styles/components/Footer.css
@@ -7,8 +7,12 @@
     position: absolute;
     bottom: 0;
     left: 0;
-    padding-top: 65px;
+    padding-top: 75px;
     padding-bottom: 25px;
+
+    @media (--desktop-md) {
+      padding-top: 65px;
+    }
 
     @media (--tablet-lg) {
       height: 60px;
