--- a/frontend/src/assets/styles/pages/partners.css
+++ b/frontend/src/assets/styles/pages/partners.css
@@ -65,15 +65,6 @@
                 margin: 0 auto;
             }
 
-            &-logo {
-                position: absolute;
-                top: 16px;
-                left: 50%;
-                transform: translateX(-85%);
-                max-width: 100px;
-                max-height: 80px;
-            }
-
             .partners__slide-background {
                 display: block;
                 margin: 0 auto;
@@ -84,7 +75,7 @@
                 display: block;
                 width: 75%;
                 height: 100%;
-                background: black;
+                background: linear-gradient(#2D356B, #C99072);
                 position: absolute;
                 top: 0;
                 left: 12.5%;
