--- a/frontend/src/assets/styles/pages/template.css
+++ b/frontend/src/assets/styles/pages/template.css
@@ -60,11 +60,11 @@
                 display: block;
                 width: 100%;
                 height: 100%;
-                background: black;
+                background: linear-gradient(#2D356B, #C99072);
                 position: absolute;
                 top: 0;
                 left: 0;
-                opacity: 0.2;
+                opacity: 0.5;
                 border-radius: 25px;
             }
         }
