--- a/frontend/src/assets/styles/pages/services.css
+++ b/frontend/src/assets/styles/pages/services.css
@@ -26,6 +26,10 @@
       @media (--tablet-lg) {
         width: 100%;
       }
+
+      &--full {
+        width: 100%;
+      }
     }
 
     &-narrow {
