--- a/frontend/src/assets/styles/pages/partners.css
+++ b/frontend/src/assets/styles/pages/partners.css
@@ -92,6 +92,7 @@
         &-info {
             display: none;
             position: absolute;
+            width: 100%;
             top: 50%;
             height: 100%;
             transform: translateY(-50%);
@@ -150,6 +151,7 @@
             }
 
             &-link {
+                display: flex;
                 position: relative;
                 padding-left: calc(var(--gs) * 2.5);
                 font-size: 20px;
@@ -218,6 +220,7 @@
             height: 100%;
 
             .partners__slide-content {
+
                 &:after {
                     width: 100%;
                     left: 0;
@@ -226,6 +229,7 @@
                 .partners__slide-background {
                     width: 100%;
                     height: 100%;
+                    cursor: pointer;
 
                     @media(--tablet) {
                         width: auto;
@@ -234,6 +238,7 @@
 
                     &.is-active {
                         opacity: 0;
+                        cursor: default;
                     }
                 }
 
