--- a/frontend/src/assets/styles/pages/partners.css
+++ b/frontend/src/assets/styles/pages/partners.css
@@ -148,6 +148,7 @@
             &-text {
                 font-size: 20px;
                 line-height: 1.5;
+                margin-bottom: calc(var(--gs) * 1.25);
             }
 
             &-link {
@@ -167,13 +168,15 @@
 
         &-title {
             font-size: 28px;
-            /* font-size: 40px; */
             z-index: 2;
             color: var(--cl-white);
             text-align: center;
             position: absolute;
             bottom: 24px;
-            width: 100%;
+            width: 60%;
+            left: 50%;
+            transform: translateX(-50%);
+            line-height: 1.2;
         }
 
         &-wrapper {
@@ -220,16 +223,17 @@
             height: 100%;
 
             .partners__slide-content {
-
                 &:after {
+                    z-index: 1;
                     width: 100%;
                     left: 0;
+                    cursor: pointer;
                 }
 
                 .partners__slide-background {
                     width: 100%;
                     height: 100%;
-                    cursor: pointer;
+
 
                     @media(--tablet) {
                         width: auto;
@@ -238,7 +242,6 @@
 
                     &.is-active {
                         opacity: 0;
-                        cursor: default;
                     }
                 }
 
@@ -248,7 +251,12 @@
                     }
                 }
 
-
+                .partners__slide-title {
+                    font-size: 40px;
+                    width: 80%;
+                    left: 50%;
+                    transform: translateX(-50%);
+                }
             }
         }
 
