--- a/frontend/src/assets/styles/pages/contact.css
+++ b/frontend/src/assets/styles/pages/contact.css
@@ -6,6 +6,7 @@
   display: flex;
   align-items: center;
   margin-bottom: 15px;
+  animation: fade-in 0.4s ease;
 }
 .contact__item:last-of-type {
   margin-bottom: 45px;
@@ -37,6 +38,6 @@
   @media (--tablet) {
     font-size: 16px;
     padding-left: calc(var(--gs) * 3.5);
-    margin-bottom: calc(var(--gs) * .5);
+    margin-bottom: calc(var(--gs) * 0.5);
   }
 }
