--- a/frontend/src/assets/styles/base/customProperties.css
+++ b/frontend/src/assets/styles/base/customProperties.css
@@ -24,6 +24,38 @@
   --fs-p: 20px;
   --fs-a: 23px;
   --fs-a-nav: 30px;
+  @media (--desktop) {
+    --fs-h1: 35px;
+    --fs-h2: 35px;
+    --fs-h3: 25px;
+    --fs-p: 18px;
+    --fs-a: 20px;
+    --fs-a-nav: 25px;
+  }
+  @media (--tablet-lg) {
+    --fs-h1: 30px;
+    --fs-h2: 30px;
+    --fs-h3: 22px;
+    --fs-p: 18px;
+    --fs-a: 20px;
+    --fs-a-nav: 20px;
+  }
+  @media (--mobile-lg) {
+    --fs-h1: 30px;
+    --fs-h2: 30px;
+    --fs-h3: 20px;
+    --fs-p: 16px;
+    --fs-a: 20px;
+    --fs-a-nav: 16px;
+  }
+  @media (--mobile) {
+    --fs-h1: 25px;
+    --fs-h2: 25px;
+    --fs-h3: 16px;
+    --fs-p: 14px;
+    --fs-a: 17px;
+    --fs-a-nav: 14px;
+  }
 
   /* Максимальная длина контейнера */
   --container-max-width: 1440px;
@@ -44,46 +76,4 @@
   --desktop-lg-size-min: 1600px;
   --desktop-xl-size: 1909px;
   --desktop-xl-size-min: 1910px;
-}
-
-/* наверное это не самое лучшее место для медиазапросов, но пока пока они побудут туть */
-@media (--desktop) {
-  .app {
-    --fs-h1: 35px;
-    --fs-h2: 35px;
-    --fs-h3: 25px;
-    --fs-p: 18px;
-    --fs-a: 20px;
-    --fs-a-nav: 25px;
-  }
-}
-@media (max-width: var(--tablet-lg-size-min)) {
-  .app {
-    --fs-h1: 30px;
-    --fs-h2: 30px;
-    --fs-h3: 22px;
-    --fs-p: 18px;
-    --fs-a: 20px;
-    --fs-a-nav: 20px;
-  }
-}
-@media (max-width: var(--mobile-lg-size-min)) {
-  .app {
-    --fs-h1: 30px;
-    --fs-h2: 30px;
-    --fs-h3: 20px;
-    --fs-p: 16px;
-    --fs-a: 20px;
-    --fs-a-nav: 16px;
-  }
-}
-@media (max-width: var(--mobile-size-min)) {
-  .app {
-    --fs-h1: 25px;
-    --fs-h2: 25px;
-    --fs-h3: 16px;
-    --fs-p: 14px;
-    --fs-a: 17px;
-    --fs-a-nav: 14px;
-  }
 }
