--- a/frontend/src/assets/styles/components/Navbar.css
+++ b/frontend/src/assets/styles/components/Navbar.css
@@ -36,7 +36,7 @@
   &__pageTitle {
     color: #c99072;
     margin-left: 14px;
-    animation: fade-up 0.4s ease-in-out;
+    animation: navbarTitleMove 0.3s ease-in-out;
 
     @media (--mobile) {
       font-size: 18px;
@@ -166,4 +166,14 @@
   bottom: 0;
   width: 100%;
   height: 120%;
+}
+@keyframes navbarTitleMove {
+  0% {
+    transform: translateX(-10px);
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0px);
+  }
 }
