--- a/frontend/src/assets/styles/elements/checkbox.css
+++ b/frontend/src/assets/styles/elements/checkbox.css
@@ -49,13 +49,16 @@ Check Box label text
 .checkbox__text {
   p {
     color: #7e7e7e;
+    @media (--tablet) {
+      font-size: 18px;
+    }
   }
   a {
     color: #bcbcc4;
     text-decoration: underline;
     font-family: var(--base-font);
     font-size: 20px;
-    @media (max-width: 1279px) {
+    @media (--tablet) {
       font-size: 18px;
     }
   }
