--- a/frontend/src/assets/styles/pages/contactForm.css
+++ b/frontend/src/assets/styles/pages/contactForm.css
@@ -5,17 +5,17 @@
 
   @media (--tablet-lg) {
     position: relative;
-    background-color: #fffaeb;
-    /* animation: fade-left 0.5s ease-in-out; */
-    animation: fade-to-top 0.4s ease-in-out;
+    /* background-color: #fffaeb; */
+    animation: fade-left 0.4s ease-in-out;
+    /* animation: fade-to-top 0.4s ease-in-out; */
   }
 }
 .container--contact-exit {
   animation: fade-right 0.5s ease-in-out;
   @media (--tablet-lg) {
-    background-color: #fffaeb;
-    /* animation: fade-right 0.5s ease-in-out; */
-    animation: fade-to-bottom 0.4s ease-in-out;
+    /* background-color: #fffaeb; */
+    animation: fade-right 0.4s ease-in-out;
+    /* animation: fade-to-bottom 0.4s ease-in-out; */
   }
 }
 
