--- a/frontend/src/assets/styles/pages/contact.css
+++ b/frontend/src/assets/styles/pages/contact.css
@@ -5,8 +5,12 @@
   width: 100%;
   display: flex;
   align-items: center;
-  margin-bottom: 15px;
+  margin-bottom: calc(var(--gs) * 4);
   animation: fade-in 0.4s ease;
+
+  @media (--tablet) {
+    margin-bottom: calc(var(--gs));
+  }
 }
 .contact__item:last-of-type {
   margin-bottom: 45px;
@@ -21,7 +25,7 @@
   position: absolute;
   left: 0;
   top: 0;
-  margin: -3px 4px 0 0;
+  margin: -6px 4px 0 0;
 
   @media (--tablet) {
     width: 20px;
@@ -33,7 +37,7 @@
   font-family: var(--base-font);
   padding-left: calc(var(--gs) * 6.5);
   position: relative;
-  margin-bottom: calc(var(--gs) * 1.5);
+  /* margin-bottom: calc(var(--gs) * 1.5); */
 
   @media (--tablet) {
     font-size: 16px;
